hphp/hack/test/typecheck/goto/goto_multiple_labels.php.exp
File "goto_multiple_labels.php", line 4, characters 11-12:
Encountered unexpected token 'L1'. (Parsing[1002])
